--- a/css/walkbrook.css
+++ b/css/walkbrook.css
@@ -11,11 +11,25 @@
   width: 99%;
 }
 .navbar .logo img {
-  width: 35px;
+  width: 130px;
   float: left;
-  margin: 5px;
-  margin-left: 15px;
+  margin-right: 15px;
+  background-color: white;
+  position: absolute;
 }
+.navbar.collapsed .logo img {
+	width: 51px;
+	position: inherit;
+}
+.navbar {
+	border-bottom: 10px solid #fe7370;
+
+}
+.navbar-brand {
+	visibility: hidden;
+}
+.navbar.collapsed .navbar-brand { visibility: visible; }
+
 .container address {
   margin-bottom: 20px;
   font-size: 16px;
@@ -49,18 +63,26 @@
 }
 .carousel-indicators .active {
     background-color: #FF6D70;
+	width: 15px;
+	height: 15px;
+	margin: 7px
 }
 .meliota-primary-color {
   color: #FF6D70;
 }
 .carousel {
-  margin-top: 53px;
+  margin-top: 33px;
 }
 .carousel-indicators li {
   width: 13px;
   height: 13px;
+  border-radius: 0 !important;
+  margin: 8px;
 }
-.carousel-indicators .active {
-  width: 15px;
-  height: 15px;
+
+.page-header {
+    margin-top: 10px;
+}
+section {
+    padding-top: 10px;
 }
